--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+              "src/styles.css"
+              
 
             ],
             "scripts": []
